--- a/index.html
+++ b/index.html
@@ -1,1 +1,189 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lesson-8</title>
+    <link rel="stylesheet" href="css/style.css">
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
+
+</head>
+
+<body>
+
+    <header>
+        <div class="center">
+            <div class="flex_container">
+                <a href=""><img src="img/logo.png" alt=""></a>
+                <img src="img/menu logo.png" alt="">
+            </div>
+            <div class="tcenter">
+                <h1>Where will you go next?</h1>
+
+                <input type="search" placeholder="Start typing...">
+                <button>GO</button>
+            </div>
+        </div>
+    </header>
+    <section id="sec1">
+        <div class="center">
+            <h3>TOP DESTINATIONS</h3>
+
+            <p>Some of the top destinations for your next summer adventure.</p>
+
+
+            <div class="flex_container">
+
+
+                <div class="white">
+                    <span>
+                        $1.095
+                    </span>
+                    <img src="img/australia.png" alt="">
+
+                    <h4>AMAZING AUSTRALIA</h4>
+
+                    <p>
+
+                        Become inspired to travel to
+                        Australia.Discover fantastic things
+                        to do & places to go.
+
+                    </p>
+                </div>
+
+                <div class="white">
+                    <span>
+                        $1.295
+                    </span>
+                    <img src="img/southamerica.png" alt="">
+
+                    <h4>AMAZING AUSTRALIA</h4>
+
+                    <p>
+
+                        Become inspired to travel to
+                        Australia.Discover fantastic things
+                        to do & places to go.
+
+                    </p>
+                </div>
+                <div class="white">
+                    <span>
+                        $695
+                    </span>
+                    <img src="img/northamerica.png" alt="">
+
+                    <h4>AMAZING AUSTRALIA</h4>
+
+                    <p>
+
+                        Become inspired to travel to
+                        Australia.Discover fantastic things
+                        to do & places to go.
+
+                    </p>
+                </div>
+                <div class="white">
+                    <span>
+                        $295
+                    </span>
+                    <img src="img/europa.png" alt="">
+
+                    <h4>AMAZING AUSTRALIA</h4>
+
+                    <p>
+
+                        Become inspired to travel to
+                        Australia.Discover fantastic things
+                        to do & places to go.
+
+                    </p>
+                </div>
+
+
+
+
+            </div>
+        </div>
+    </section>
+    <section id="sec2">
+        <div class="center">
+
+            <h1>Before you leave</h1>
+
+            <div class="flex_container">
+
+                <div class="black">
+
+                    <h2>VISA & DOCUMENTS</h2>
+
+                    <p>
+                        There are some things you should take
+                        care of before going to your next
+                        adventure. We’ll help you to get
+                        required visas and documents needed.
+                    </p>
+
+                </div>
+                <div class="black">
+
+                    <h2>ACCOMMADATION</h2>
+
+                    <p>
+                        There are some things you should take
+                        care of before going to your next
+                        adventure. We’ll help you to get
+                        required visas and documents needed.
+                    </p>
+
+                </div>
+                <div class="black">
+
+                    <h2>TRANSPORTATION</h2>
+
+                    <p>
+                        There are some things you should take
+                        care of before going to your next
+                        adventure. We’ll help you to get
+                        required visas and documents needed.
+                    </p>
+
+                </div>
+
+            </div>
+            <div class="tcenter">
+                <div class="srch">
+                    <h2>GET HOTTEST DEALS TO YOUR INBOX</h2>
+
+                    <input type="search" placeholder="Email Address">
+                    <button>SUBSCRIBE</button>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <footer>
+        <div class="center">
+            <div class="flex_container">
+
+                <p> Copyright © 2014 Travelly. All Rights Reserved. Designed for Despreneur. </p>
+                <div class="links">
+                    <a href="">HOME</a>
+                    <a href="">ABOUT</a>
+                    <a href="">BLOG</a>
+                    <a href="">PRESS</a>
+                    <a href="">CONTACT</a>
+                </div>
+            </div>
+        </div>
+    </footer>
+</body>
+
+</html>
